	- Clear rocket dictionaries between heats. Compute assists under the same conditions for local and remote tournaments.
	- Cause a spawn failure instead of throwing an exception so that tournaments can retry spawning.

IMPROVEMENTS
- Internal:
	- Allow BDGUIComboBox to be relocated/resized.
-UI:
	- Add check for disabled PRE when competitions are active.
- Tournaments:
	- Add a '-z' option to the tournament parser to shift the scores so that the lowest is 0.
	- Add taken counts to the summaries.
	- Add a '-z' option to the tournament parser to shift the scores so that the lowest is 0.
	- Adjust rocket parts hit and damage fields to match ruby schema in the remote orchestration.
	- Only adjust the altitude for failed spawns for ground spawns.
	- Allow specifying both '-c' and tournament dir to parse the specified tournament dir as a collection (i.e., without the tournament folder structure).
- Kerbal Safety:
	- Reconfigure inventories when the kerbal inventory slider is adjusted.
- AI:
	- Add additional control "Afterburner Priority" for afterburner toggling under Speed category of AI. Default value of 50. 0 and AI will not use AB, 100 and AI will always use AB.
	- Vary AB hysteresis based on "Afterburner Priority" setting using an exponential average to smooth the vessel's TWR (lag factor of 0.5s) to judge whether AI should toggle AB vs. using instantaneous acceleration.
- Spawning:
	- Respawn the spawn probe when showing the spawn point if the active vessel has been destroyed.

FIXES
-Fix SSTs being addable to engines
-Fix SST not showing on/off status on load
-Fix Paintball decals not appearing.
-Fix AIR-2 Genie cost
-Fix SelfSealTanks not respecting symmetry
-fix fires not extinguishing if fuel < 0
-Fix engine fire behavior, now capped to max one fire at a time
-Fix Explosions not damaging buildings
-Fix RESET_ARMOR resetting hull material
-Fix Steel parts gaining more than the 1.75x HP mult they should be getting
-Fix AI aim offset being offset