@@ -315,6 +315,7 @@ Localization
         #LOC_BDArmory_Settings_CompetitionStartNowAfter = Start Comp. NOW Delay
         #LOC_BDArmory_Settings_StartRapidDeployment = Start Rapid Deployment
         #LOC_BDArmory_Settings_EditInputs = Edit Inputs
+        #LOC_BDArmory_Settings_CompetitionCloseSettingsOnCompetitionStart = Close Settings When Starting Competitions
 
         #LOC_BDArmory_BDARemoteOrchestration_Title = BDA Remote Orchestration
         #LOC_BDArmory_Settings_RemoteLogging = Remote Orchestration
